@@ -1,3 +1,7 @@
+2003-11-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
+	* src/components/ogre: added AvatarKeyboardListener.(h|cpp)
+	and restored local avatar movement.
+
 2003-11-26 Miguel Guzman <aglanor [at] telefonica [dot] net>
 	* src/components/ogre: added Avatar.(h|cpp) to store
 	the whole scenenode tree for the avatar and to control
